[package]
name = "catkin-bloom"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.23.0", features = ["serialize"] }
walkdir = "2"
anyhow = "1"
tempfile = "3"
clap = { version = "3", features = ["cargo"] }
rayon = "1"
