[package]
name = "catkin-bloom"
version = "0.0.1"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
license = "MIT"
keywords = [ "ros", "catkin", "bloom", "robots" ]
categories = [ "command-line-utilities", "development-tools" ]
readme = "README.md"
repository = "https://github.com/tavo-robots/catkin-bloom"
description = "build entire catkin workspace using bloom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.23.0", features = ["serialize"] }
walkdir = "2"
anyhow = "1"
tempfile = "3"
clap = { version = "3", features = ["cargo"] }
rayon = "1"
log = "0.4"
env_logger = "0.9"
indicatif = "0.16"
